Updates image source

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <br>
 
 <body>
-  <img src="ThinkfulPhoto.jpeg" alt="Hi! I'm Greg Lynn" width="300" height="350"/>
+  <img src="./images/ThinkfulPhoto.jpeg" alt="Hi! I'm Greg Lynn" width="300" height="350"/>
   <h3>Hi! I'm Greg Lynn</h3>
   <p>I am a Software Developer living in Denver, CO.</p>
   <p>As a former property manager, I am interested in:</p>
