--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
+
+<body>
 <header>
   <h1> Gregory Lynn</h1>
   <h3> Software Developer</h3>
 </header>
 
 <br>
-
-<body>
+<main>
   <img src="./images/ThinkfulPhoto.jpeg" alt="Hi! I'm Greg Lynn" width="300" height="350"/>
   <h3>Hi! I'm Greg Lynn</h3>
   <p>I am a Software Developer living in Denver, CO.</p>
@@ -26,46 +27,34 @@
       <li>Constructing fun ideas with fellow developers.</li>
     </ul>
     </div>
-    <p>Please take a look at my website and feel free to <strong><a href="#contact">Contact Me!</a></strong></p>
-</body>
+    <p>Please take a look at my website and feel free to <strong><a href="mailto:greglynn1992@gmail.com">Contact Me!</a></strong></p>
 
 <hr>
 
-<main>
-  <body>
     <h2>About Greg</h2>
       <article> <!--Is this the proper use of an article container?-->
     <p>While attending Salisbury University, I thought politics was what I wanted to do but more than halfway through I realized coding was something that interested me far beyond what political science did. So, I started a codecademy account and began teaching myself. After college, I worked in property management where I eventually realized that is not what my calling was.</p>
     <p>When I became a student at <strong>Thinkful</strong> I realized software development is what I should have been doing all along. I love to challenge myself and be rewarded for that challenge.</p>
     <p>If you are looking to hire a software developer, look no further! I am eager to learn and grow in an easy-going, challenging environment. I would love to be apart of your next project!</p>
     </article>
-  </body>
-</main>
 
 <hr>
 
-<body>
   <h3>Contact Greg</h3>
   <p>I would love to hear from you. Please feel free to contact or follow me:</p>
   <div class="div2">
     <ol>
-      <li><a href= "https://github.com/greg-lynn">GitHub</a></li>
-      <li><a href= "https://linkedin.com/in/gregory-lynn-395385b8">LinkedIn</li>
+      <li><a href= "https://github.com/greg-lynn" target="_blank">GitHub</a></li>
+      <li><a href= "https://linkedin.com/in/gregory-lynn-395385b8" target="_blank">LinkedIn</li>
     </ol>
   </div>
-  <!--I am trying to insert a map of my location, Denver,CO -->
-  <a href= "https://https://www.google.com/maps/place/Denver,+CO/@39.7378703,-105.0312697,12z/data=!4m5!3m4!1s0x876b80aa231f17cf:0x118ef4f8278a36d6!8m2!3d39.7392358!4d-104.990251"></a>
-</body>
 
 <br>
 
+</main>
 <footer>
   <p><strong>Copyright Greg Lynn</strong></p>
 </footer>
-
-  <body>
-    <script src="script.js"></script>
-  </body>
-
+</body>
 
 </html>
