Fixed Copyright link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="div2">
         <ol>
           <li><a href= "https://github.com/greg-lynn" target="_blank">GitHub</a></li>
-          <li><a href= "https://linkedin.com/in/gregory-lynn-395385b8" target="_blank">LinkedIn</li>
+          <li><a href= "https://linkedin.com/in/gregory-lynn-395385b8" target="_blank">LinkedIn</a></li>
         </ol>
       </div>
 
