--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My First Website</title>
+    <title>Introductory Website</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
