fixes photo bug

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <h2>Portfolio</h2>
       <div class='group'>
         <div class='item'>
-          <img src="images/BreweryAppScreenshot2.jpg" alt="Brewery App Screnshot" class="rounded">
+          <img src="images/BreweryAppScreenshot2.JPG" alt="Brewery App Screnshot" class="rounded">
           <h3>Brewery Search</h3>
           <p>This app allows users to search for breweries by state. My goal was to enable users to find breweries near them and be able to find directions and the brewery contact information. The technologies I used are HTML, CSS, JavaScript, and jQUery. I learned how to implement multiple APIs to gather data for the user.</p>
           <a href="https://github.com/greg-lynn/SearchBreweriesByState" target="_blank">Check out my repository!</a>
