Adds new project/photo to webpage

--- a/index.html
+++ b/index.html
@@ -38,51 +38,52 @@
             <p>I am looking for a company where I can learn and grow. My ideal workplace is one where I can stay for a long time and become an asset for the company for years to come.</p>
           </div>
         </div>
-    </section>
+      </section>
     </div>
 
-      <section id="about">
-        <div class="wrapper">
-            <h2>About Me</h2>
-      <div class='group'>
-        <div class='item-double'>
-          <p>I am a hard worker who strives to be a perfectionist. I love the challenge that coding brings and that it forces me to learn new things as well as pushes me to constantly get better at being a developer.</p>
+    <section id="about">
+      <div class="wrapper">
+          <h2>About Me</h2>
+        <div class='group'>
+          <div class='item-double'>
+            <p>I am a hard worker who strives to be a perfectionist. I love the challenge that coding brings and that it forces me to learn new things as well as pushes me to constantly get better at being a developer.</p>
 
-          <p>When I am not coding, I love being outdoors and hanging out with my girlfriend and puppy, Reptar. Not only do I love being outside but I also love playing video games and watching sports. All of my favorites teams are in Washington, DC.</p>
+            <p>When I am not coding, I love being outdoors and hanging out with my girlfriend and puppy, Reptar. Not only do I love being outside but I also love playing video games and watching sports. All of my favorites teams are in Washington, DC.</p>
+          </div>
+            <div class='item'>
+              <img src="images/ColoradoHikeThinkful.jpg" alt="Hiking" class="rounded">
+            </div>
         </div>
-          <div class='item'>
-<img src="images/ColoradoHikeThinkful.jpg" alt="Hiking" class="rounded">
-
-        </div>
-      </div>
       </div>
     </section>
 
 
-<div class="wrapper">
+    <div class="wrapper">
       <section id="portfolio">
       <h2>Portfolio</h2>
       <div class='group'>
         <div class='item'>
           <img src="images/BreweryAppScreenshot2.JPG" alt="Brewery App Screnshot" class="rounded">
           <h3>Brewery Search</h3>
-          <p>This app allows users to search for breweries by state. My goal was to enable users to find breweries near them and be able to find directions and the brewery contact information. The technologies I used are HTML, CSS, JavaScript, and jQUery. I learned how to implement multiple APIs to gather data for the user.</p>
+          <p>This app allows users to search for breweries by state. My goal was to enable users to find breweries near them and be able to find directions and the brewery contact information. The technologies I used are HTML, CSS, JavaScript, and JQuery. I learned how to implement multiple APIs to gather data for the user.</p>
           <a href="https://github.com/greg-lynn/SearchBreweriesByState" target="_blank">Check out my repository!</a>
           <a href="https://greg-lynn.github.io/SearchBreweriesByState/" target="_blank">Explore the live app!</a>
         </div>
         <div class='item'>
             <img src="images/QuizAppScreenshot.jpg" alt="Quiz App Screenshot" class="rounded">
             <h3>Quiz App</h3>
-            <p>This app tests users knowledge about World History. My goal was to build an app that utilizes different functions to create a short multiple choice quiz. The technologies I used were HTML, CSS, JavaScript, and jQuery. I learned how to use functions and calls to create an interactive quiz application.</p>
+            <p>This app tests users knowledge about World History. My goal was to build an app that utilizes different functions to create a short multiple choice quiz. The technologies I used were HTML, CSS, JavaScript, and JQuery. I learned how to use functions and calls to create an interactive quiz application.</p>
             <a href="https://github.com/greg-lynn/Quiz-App" target="_blank">Check out my repository!</a>
             <a href="https://greg-lynn.github.io/Quiz-App/" target="_blank">Explore the live app!</a>
         </div>
       </div>
       <div class='group'>
         <div class='item'>
-          <img src="images/PlaceholderAppPhotoThinkful.jpg" alt="Pet App Screenshot" class="rounded">
-          <h3>Pet Apointment App</h3>
-          <p>This is a description of the Pet Appointment App I built. I'l share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
+          <img src="images/NationalParksAppPhoto.JPG" alt="National Parks App Screenshot" class="rounded">
+          <h3>National Parks Search App</h3>
+          <p>This app allows users to search for National Parks in any given state. My goal was to build an app that utilizes different functions to create a way for users to retrieve information about national parks near them or in a state they would like to visit. I used an API to perform get requests that allowed me to append multiple perameters to the DOM. The technologies I used were HTML, CSS, JavaScript, jQuery, and APIs.</p>
+          <a href="https://github.com/greg-lynn/NationalParksApp" target="_blank">Check out my repository!</a>
+          <a href="https://greg-lynn.github.io/NationalParksApp//" target="_blank">Explore the live app!</a>
         </div>
         <div class='item'>
           <img src="images/PlaceholderAppPhotoThinkful.jpg" alt="Team Project Screenshot" class="rounded">
@@ -90,7 +91,7 @@
           <p>This is a description of the Team Project App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
         </div>
       </div>
-    </section>
+      </section>
 
 
 
@@ -98,8 +99,8 @@
 
       <section id="contact">
           <h2>Contact</h2>
-          <div class='group'>
-          <div class='item'>
+        <div class='group'>
+        <div class='item'>
           <form action="#" method="POST">
             <label for="user-name">Name:</label>
             <input id="user-name" type="text" name="name">
@@ -118,18 +119,17 @@
           <p>Linkedin: <a href="https://linkedin.com/in/gregory-lynn-395385b8" target="_blank">Connect with me!</a></p>
           <p>GitHub: <a href="https://github.com/greg-lynn" target="_blank">See my work!</a></p>
         </div>
-      </div>
-    </section>
+        </div>
+      </section>
 
 
 
-      </div>
-    </main>
+    </div>
+  </main>
 
-<footer>
-  <p>© Greg Lynn</p>
-</footer>
+  <footer>
+    <p>© Greg Lynn</p>
+  </footer>
 
-  </body>
-
-  </html>
+</body>
+</html>
