adds new project divs/photos

--- a/index.html
+++ b/index.html
@@ -86,16 +86,28 @@
           <a href="https://greg-lynn.github.io/NationalParksApp//" target="_blank">Explore the live app!</a>
         </div>
         <div class='item'>
-          <img src="images/PlaceholderAppPhotoThinkful.jpg" alt="Team Project Screenshot" class="rounded">
+          <img src="images/GitHubAPIScreenshot.JPG" alt="Github API App" class="rounded">
           <h3>Team Project App</h3>
           <p>This is a description of the Team Project App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
         </div>
       </div>
+      <div class='group'>
+        <div class='item'>
+          <img src="images/DogImageApp1Screenshot.JPG" alt="Dog Image App Screenshot" class="rounded">
+          <h3>National Parks Search App</h3>
+          <p>This app allows users to search for random dog photos after choosing how many photos they would like to generate. My goal was to build an app that took in an input and returned randomized photos that are being collected from an API. I used the API to perform get requests that allowed me to append random dog photos to the DOM. The technologies I used were HTML, CSS, JavaScript, jQuery, and an API.</p>
+          <a href="https://github.com/greg-lynn/DogImageApp1" target="_blank">Check out my repository!</a>
+          <a href="https://greg-lynn.github.io/DogImageApp1/" target="_blank">Explore the live app!</a>
+        </div>
+        <div class='item'>
+          <img src="images/WhittierWoodWorksScreenshot.JPG" alt="Whitier WoodWorks Screenshot" class="rounded">
+          <h3>Whittier WoodWorks Website</h3>
+          <p>I built this website for my brother's woodworking business. I used a lot of flexbox to position divs where I wanted them. The technologies I used were HTML, CSS, JavaScript. I utilized JavaScript to create an image carousel that allows users to click through the photo gallery.</p>
+          <a href="https://github.com/greg-lynn/WhittierWoodworks" target="_blank">Check out my repository!</a>
+          <a href="https://greg-lynn.github.io/WhittierWoodworks/" target="_blank">Explore the live website!</a>
+        </div>
+      </div>
       </section>
-
-
-
-
 
       <section id="contact">
           <h2>Contact</h2>
