updates whittier div details

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class='item'>
           <img src="images/WhittierWoodWorksScreenshot.JPG" alt="Whitier WoodWorks Screenshot" class="rounded">
           <h3>Whittier WoodWorks Website</h3>
-          <p>I built this website for my brother's woodworking business. I used a lot of flexbox to position divs where I wanted them. The technologies I used were HTML, CSS, JavaScript. I utilized JavaScript to create an image carousel that allows users to click through the photo gallery.</p>
+          <p>I built this website for my brother's woodworking business. I used a lot of flexbox to position divs where I wanted them. If you look at my CSS code, you can see alternative lines of heavy flexbox code that allows for a photo gallery instead of image carousel. The technologies I used were HTML, CSS, JavaScript. I utilized JavaScript to create an image carousel that allows users to click through the photo gallery.</p>
           <a href="https://github.com/greg-lynn/WhittierWoodworks" target="_blank">Check out my repository!</a>
           <a href="https://greg-lynn.github.io/WhittierWoodworks/" target="_blank">Explore the live website!</a>
         </div>
