fixes quiz app broken photo

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="https://greg-lynn.github.io/SearchBreweriesByState/" target="_blank">Explore the live app!</a>
         </div>
         <div class='item'>
-            <img src="images/QuizAppScreenshot.jpg" alt="Quiz App Screenshot" class="rounded">
+            <img src="images/QuizAppScreenshot.JPG" alt="Quiz App Screenshot" class="rounded">
             <h3>Quiz App</h3>
             <p>This app tests users knowledge about World History. My goal was to build an app that utilizes different functions to create a short multiple choice quiz. The technologies I used were HTML, CSS, JavaScript, and JQuery. I learned how to use functions and calls to create an interactive quiz application.</p>
             <a href="https://github.com/greg-lynn/Quiz-App" target="_blank">Check out my repository!</a>
