updates github repo API description

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class='item'>
           <img src="images/GitHubAPIScreenshot.JPG" alt="Github API App" class="rounded">
           <h3>Team Project App</h3>
-          <p>This is a description of the Team Project App I built. I'll share what my goal was in creating it, the skills/languages I applied, and what I learned doing it.</p>
+          <p>This app allows users to search for github user's repositories by username. My goal was to build an app that let users enter an input of github user name and have the output return a list of the user's repos. I used an API to perform get requests that allowed me to append a list of user's github repositories to the DOM. The technologies I used were HTML, CSS, JavaScript, jQuery, and APIs.</p>
         </div>
       </div>
       <div class='group'>
