--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
         </div>
         <div class='item'>
           <img src="images/GitHubAPIScreenshot.JPG" alt="Github API App" class="rounded">
-          <h3>Team Project App</h3>
+          <h3>Github Repo API App</h3>
           <p>This app allows users to search for github user's repositories by username. My goal was to build an app that let users enter an input of github user name and have the output return a list of the user's repos. I used an API to perform get requests that allowed me to append a list of user's github repositories to the DOM. The technologies I used were HTML, CSS, JavaScript, jQuery, and APIs.</p>
+          <a href="https://github.com/greg-lynn/GitHubRepoAPI" target="_blank">Check out my repository!</a>
+          <a href="https://greg-lynn.github.io/GitHubRepoAPI/" target="_blank">Explore the live app!</a>
         </div>
       </div>
       <div class='group'>
         <div class='item'>
           <img src="images/DogImageApp1Screenshot.JPG" alt="Dog Image App Screenshot" class="rounded">
-          <h3>National Parks Search App</h3>
+          <h3>Random Dog Image App</h3>
           <p>This app allows users to search for random dog photos after choosing how many photos they would like to generate. My goal was to build an app that took in an input and returned randomized photos that are being collected from an API. I used the API to perform get requests that allowed me to append random dog photos to the DOM. The technologies I used were HTML, CSS, JavaScript, jQuery, and an API.</p>
           <a href="https://github.com/greg-lynn/DogImageApp1" target="_blank">Check out my repository!</a>
           <a href="https://greg-lynn.github.io/DogImageApp1/" target="_blank">Explore the live app!</a>
