edits portfolio paragraphs

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         <div class='item'>
           <img src="images/BreweryAppScreenshot2.JPG" alt="Brewery App Screnshot" class="rounded">
           <h3>Brewery Search</h3>
-          <p>This app allows users to search for breweries by state. My goal was to enable users to find breweries near them and be able to find directions and the brewery contact information. The technologies I used are HTML, CSS, JavaScript, and JQuery. I learned how to implement multiple APIs to gather data for the user.</p>
+          <p>This app allows users to search for breweries by state. My goal was to enable users to find breweries near them and be able to find directions and the brewery contact information. The technologies I used are HTML, CSS, JavaScript, and jQuery. I learned how to implement multiple APIs to gather data for the user.</p>
           <a href="https://github.com/greg-lynn/SearchBreweriesByState" target="_blank">Check out my repository!</a>
           <a href="https://greg-lynn.github.io/SearchBreweriesByState/" target="_blank">Explore the live app!</a>
         </div>
         <div class='item'>
             <img src="images/QuizAppScreenshot.JPG" alt="Quiz App Screenshot" class="rounded">
             <h3>Quiz App</h3>
-            <p>This app tests users knowledge about World History. My goal was to build an app that utilizes different functions to create a short multiple choice quiz. The technologies I used were HTML, CSS, JavaScript, and JQuery. I learned how to use functions and calls to create an interactive quiz application.</p>
+            <p>This app tests users knowledge about World History. My goal was to build an app that utilizes different functions to create a short multiple choice quiz. The technologies I used were HTML, CSS, JavaScript, and jQuery. I learned how to use functions and calls to create an interactive quiz application.</p>
             <a href="https://github.com/greg-lynn/Quiz-App" target="_blank">Check out my repository!</a>
             <a href="https://greg-lynn.github.io/Quiz-App/" target="_blank">Explore the live app!</a>
         </div>
@@ -104,7 +104,7 @@
         <div class='item'>
           <img src="images/WhittierWoodWorksScreenshot.JPG" alt="Whitier WoodWorks Screenshot" class="rounded">
           <h3>Whittier WoodWorks Website</h3>
-          <p>I built this website for my brother's woodworking business. I used a lot of flexbox to position divs where I wanted them. If you look at my CSS code, you can see alternative lines of heavy flexbox code that allows for a photo gallery instead of image carousel. The technologies I used were HTML, CSS, JavaScript. I utilized JavaScript to create an image carousel that allows users to click through the photo gallery.</p>
+          <p>I built this website for my brother's woodworking business. I used a lot of flexbox to position divs where I wanted them. If you look at my CSS code, you can see alternative lines of heavy flexbox code that allows for a photo gallery instead of image carousel. The technologies I used were HTML, CSS, and JavaScript. I utilized JS to create an image carousel that allows users to click through the photo gallery.</p>
           <a href="https://github.com/greg-lynn/WhittierWoodworks" target="_blank">Check out my repository!</a>
           <a href="https://greg-lynn.github.io/WhittierWoodworks/" target="_blank">Explore the live website!</a>
         </div>
